# wordle-cheater

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  release.yml  test-pypi.yml  tests.yml
docs/: api.rst  cli_interface.rst  cli_reference.rst  conf.py  index.md  index.rst  reference.rst  requirements.txt
src/wordle_cheater/: __init__.py  cheater.py  cli.py  curses_interface.py  dictionary.py  interface.py  interface_backend.py  interface_base.py  interface_frontend.py  wordle_cheater.py
tests/: __init__.py  test_cheater.py  test_check_word.py  test_cli.py  test_interface_backend.py  test_interface_base.py  test_parse_wordle_letters.py  test_wordle_cheater.py  test_wordle_guesses.py
