[tool.poetry]
name = "wordle-cheater"
version = "0.1.0"
description = ""
authors = ["Edward Eskew <edward.eskew@wsu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
