[tool.poetry]
name = "wordle-cheater"
version = "0.1.0"
description = ""
authors = ["Edward Eskew <edward.eskew@wsu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.0"
pre-commit = "^2.17.0"
black = "^22.1.0"

[tool.poetry.scripts]
wordle-cheater = "wordle_cheater.cli:wordle_cheat"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
