[tool.poetry]
name = "wordle-cheater"
version = "0.1.0"
description = ""
authors = ["Edward Eskew <edward.eskew@wsu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
ipython = "^7.0"
pre-commit = "^2.17.0"
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
Sphinx = "^4.3"
numpydoc = "^1.2"

[tool.poetry.scripts]
wordle-cheater = "wordle_cheater.cli:wordle_cheat"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wordle_cheater"]
omit = ["*/interface.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
